--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,82 @@
+:root{
+    --space-gap: 1rem
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.border{
+    border: 1px solid red;
+}
+
+.bottom-bar-container{
+    height: 100px;
+    flex-shrink: 0;
+}
+
+.main-container{
+    flex-grow: 1;
+    overflow: auto; 
+    display: flex;  
+}
+
+
+.main-content{
+    flex-grow: 1;
+    overflow: auto;
+}
+
+.side-nav{
+    width: 150px;
+    flex-shrink: 0;
+}
+
+.upgrade-bar{
+    height: 100px;
+    flex-shrink: 0;
+}
+
+.music-container{
+    flex-grow: 1;
+    overflow: auto;
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    padding: 1rem;
+}
+
+.container-max-width{
+    width: 100%;
+}
+
+.menu-list{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.row-l{
+    display: flex;
+    gap: 1rem;
+}
+
+.card-l{
+    width: 200px;
+    height: 200px;
+    border: 1px solid darkgreen;
+}
+
+.col-l{
+    width: calc((100% / 6) - var(--space-gap))
+}
