--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@ body{
 .main-container{
     flex-grow: 1;
     overflow: auto; 
-    display: flex;  
+    display: flex; 
+    width: 100%; 
 }
 
 
@@ -38,8 +39,8 @@ body{
 }
 
 .side-nav{
-    width: 150px;
     flex-shrink: 0;
+    padding: 1rem;
 }
 
 .upgrade-bar{
@@ -60,23 +61,34 @@ body{
     width: 100%;
 }
 
-.menu-list{
+.menu-list-l{
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .row-l{
     display: flex;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .card-l{
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    aspect-ratio: 1/1;
     border: 1px solid darkgreen;
 }
 
 .col-l{
     width: calc((100% / 6) - var(--space-gap))
+}
+
+
+@media screen and (max-width: 1100px) {
+    .col-m{
+        width: calc((100% / 4) - var(--space-gap))
+    } 
+
+
 }
