--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,13 @@ body{
 @media screen and (max-width: 1100px) {
     .col-m{
         width: calc((100% / 4) - var(--space-gap))
-    } 
+    }     
+}
 
 
+@media screen and(max-width: 700px) {
+    .col-s{
+        width: calc((100% / 2) - var(--space-gap))
+    }  
+    
 }
