--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,11 @@ body{
 .side-nav{
     flex-shrink: 0;
     padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
+
 
 .upgrade-bar{
     height: 100px;
@@ -84,6 +88,15 @@ body{
     width: calc((100% / 6) - var(--space-gap))
 }
 
+.border-l{
+    border-bottom: 1px solid grey;
+}
+
+
+
+
+
+
 
 @media screen and (max-width: 1100px) {
     .col-m{
@@ -95,6 +108,13 @@ body{
 @media screen and (max-width: 700px) {
     .col-s{
         width: calc((100% / 2) - var(--space-gap))
-    }  
+    }     
+}
+
+
+@media screen and (max-width: 600px) {
+    .hidden-m{
+        display: none;
+    }
     
 }
