--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,16 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     height: 100vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
 }
 
-.border{
+/* .border{
     border: 1px solid red;
-}
+} */
 
 .bottom-bar-container{
     height: 100px;
@@ -58,7 +58,11 @@ body{
     display: flex;
     /* flex-direction: column; */
     flex-wrap: wrap;
+    gap: 1rem;
     padding: 1rem;
+    background-color: rgb(20, 25, 34);
+    color: white;
+
 }
 
 .container-max-width{
@@ -70,6 +74,17 @@ body{
     gap: 1rem;
     justify-content: center;
     flex-wrap: wrap;
+    list-style: none;
+}
+
+.text-menu-style{
+    color: rgb(133, 135, 139);
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+.alt-menu-style{
+    font-size: .7rem;
 }
 
 .row-l{
@@ -81,7 +96,11 @@ body{
 .card-l{
     width: 100%;
     aspect-ratio: 1/1;
-    border: 1px solid darkgreen;
+    text-align: center;
+}
+.col-padding-top-bot{
+    padding-top: 1.5rem;
+    padding-bottom: 2rem;
 }
 
 .col-l{
@@ -91,6 +110,27 @@ body{
 .border-l{
     border-bottom: 1px solid grey;
 }
+
+.card-img{
+    width: 100%;
+    object-fit: contain;
+}
+
+.song-title{
+    font: 1rem;
+    padding-bottom: .2rem;
+}
+
+.info-card{
+    padding-top: .7rem;
+}
+
+.circle-img{
+    width: 150px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+}
+
 
 
 
