--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,14 @@ body{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    background-color: rgb(8, 11, 18);
 }
 
 
 .upgrade-bar{
     height: 100px;
     flex-shrink: 0;
+    background-color: rgb(8, 11, 18);
 }
 
 .music-container{
@@ -88,6 +90,7 @@ body{
     font-size: .9rem;
     font-weight: 600;
 }
+
 
 .alt-menu-style{
     font-size: .7rem;
@@ -137,7 +140,26 @@ body{
     border-radius: 50%;
 }
 
+.bottom-bar-container{
+    background-color: rgb(40, 40, 40) ;
+}
 
+.btn {
+    color: white;
+    border-color: white;
+    background-color: black;
+    border-radius: 5rem;
+    padding: .8rem 2.5rem;
+    font-weight: 600;
+    margin-right: 2rem;
+}
+
+.upgrade-bar{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+}
 
 
 
