--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ body{
     flex-shrink: 0;
     padding: 1rem;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     background-color: black;
+    gap: 1rem;
 }
 
 
@@ -136,7 +136,7 @@ body{
 }
 
 .circle-img{
-    width: 200px;
+    width: 100%px;
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
@@ -162,6 +162,50 @@ body{
     padding-top: 1.5rem;
     padding-bottom: 2rem;
 }
+
+
+.logo{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.nav-list{
+    list-style: none;
+    line-height: 1.8rem;
+}
+
+.nav-list img{
+    width: 20px;
+}
+
+.style-plus{
+    background-color: grey;
+    color: black;
+    padding: .5rem;
+    font-size: 1rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
+.left-playlist-nav{
+    flex-grow: 1;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.list-overflow{
+    overflow: auto;
+}
+
+.left-user-nav div{
+    padding-top: .5rem;
+    padding-bottom: 5px;
+}
+
+
+
 
 
 
@@ -191,5 +235,9 @@ body{
 
     .border-xs{
         border-color: transparent;
+    }
+
+    .left-user-nav{
+        margin-top: auto;
     }
 }
