--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body{
 
 
 .alt-menu-style{
-    font-size: .7rem;
+    font-size: .8rem;
 }
 
 .row-l{
@@ -249,6 +249,10 @@ body{
     display: none;
 }
 
+.circle-opacity{
+    border-radius: 50%;
+}
+
 .img-container:hover .img-walk{
     display: block;
 }
@@ -257,7 +261,9 @@ body{
     display: block;
 }
 
-
+.menu-list-l li a:hover{
+    color: white;
+}
 
 
 @media screen and (max-width: 1100px) {
