--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,21 @@ body{
 }
 
 
+li a,
+.new-playlist a {
+    text-decoration: none;
+    color:  rgb(133, 135, 139);
+}
+
+li a:hover,
+.new-playlist a:hover,
+.left-user-nav a:hover{
+    color: white;
+}
+
+
+
+
 @media screen and (max-width: 1100px) {
     .col-m{
         width: calc((100% / 4) - var(--space-gap))
