--- a/css/style.css
+++ b/css/style.css
@@ -152,12 +152,15 @@ body{
     border-radius: 5rem;
     padding: .8rem 2.5rem;
     font-weight: 600;
-    margin-right: 1rem;
+    margin-right: 1rem;   
 }
 
+.btn:hover{
+    transform: scale(110%);
+}
 
 .btn-size{
-    font-size: .7rem;
+    font-size: .8rem;
 }
 
 .upgrade-bar{
