--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,21 @@ body{
     flex-direction: column;
 }
 
-/* .border{
+/* .border-box{
     border: 1px solid red;
+    width: 50px;
+    aspect-ratio: 1/1;
 } */
 
 .bottom-bar-container{
-    height: 100px;
+    /* height: 100px; */
     flex-shrink: 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: rgb(40, 40, 40) ;
+    align-items: center;
 }
 
 .main-container{
@@ -139,10 +147,6 @@ body{
     width: 100%;
     aspect-ratio: 1/1;
     border-radius: 50%;
-}
-
-.bottom-bar-container{
-    background-color: rgb(40, 40, 40) ;
 }
 
 .btn {
@@ -307,6 +311,79 @@ li a:hover,
 
 .list-m:hover .green-line{
     display: block;
+}
+
+.bottom-img{
+    width: 60px;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+}
+
+
+.bottom-title, .player{
+    color: white;
+    line-height: 1.5rem;
+}
+
+.p-bottom-style{
+    font-size: .7rem;
+}
+
+.bottom-icon{
+    font-size: 1rem;
+    padding-right: .5rem;
+}
+
+.row-bottom{
+    align-items: center;
+}
+
+.bottom-icon-container{
+    padding-left: 3rem;
+}
+
+.player-bar{
+    display: flex;
+    gap: 2.5rem;
+    flex-grow: 1;
+    width: 100%;
+    justify-content: center;
+}
+
+.mid-player{
+    flex-grow: 1;
+    max-width: 35%;
+}
+
+.progress-bar{
+    display: flex;  
+    align-items: baseline;
+    gap: 2rem;  
+    color: white;
+    font-size: .8rem;
+}
+
+.progress-bar-line{
+    width: 100%;
+    height: 4px;
+    background-color:  rgb(133, 135, 139);
+    margin-top: 1.2rem;
+}
+
+.bottom-icon-container-right{
+    color: white;
+}
+
+.volume-line{
+    height: 4px;
+    background-color:  rgb(133, 135, 139);
+    width: 150px
+}
+
+.right-player{
+    display: flex;
+    gap: var(--space-gap);
+    align-items: center;
 }
 
 
