--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body{
     width: 100%;
     justify-content: space-between;
     padding: 1rem;
+    padding-bottom: 2rem;
     background-color: rgb(40, 40, 40) ;
     align-items: center;
 }
@@ -339,7 +340,7 @@ li a:hover,
 }
 
 .bottom-icon-container{
-    padding-left: 3rem;
+    padding-left: 1rem;
 }
 
 .player-bar{
@@ -348,6 +349,11 @@ li a:hover,
     flex-grow: 1;
     width: 100%;
     justify-content: center;
+    align-items: center;
+}
+
+.play-button-size{
+    font-size: 2rem;
 }
 
 .mid-player{
@@ -377,7 +383,6 @@ li a:hover,
 .volume-line{
     height: 4px;
     background-color:  rgb(133, 135, 139);
-    width: 150px
 }
 
 .right-player{
