--- a/css/style.css
+++ b/css/style.css
@@ -331,8 +331,8 @@ li a:hover,
 }
 
 .bottom-icon{
-    font-size: 1rem;
-    padding-right: .5rem;
+    font-size: .8rem;
+    padding-right: .7rem;
 }
 
 .row-bottom{
@@ -402,7 +402,19 @@ li a:hover,
 @media screen and (max-width: 700px) {
     .col-s{
         width: calc((100% / 2) - var(--space-gap))
-    }     
+    } 
+    
+    .bottom-icon-container-s{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .bottom-icon-s{
+        padding-bottom: .5rem;
+    }
+
+    
 }
 
 
